--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome for Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/mstyle.css" rel="stylesheet">
+    <link href="/main/css/mstyle.css" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
@@ -96,6 +96,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
-    <script src="/js/mscript.js"></script>
+    <script src="/main/js/mscript.js"></script>
 </body>
 </html>
